--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ded-wds/source": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vue": "^3.3.4"
@@ -48,9 +49,11 @@
     "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
+    "class-variance-authority": "^0.7.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.16.1",
+    "gh-pages": "^6.1.1",
     "jsdom": "~22.1.0",
     "nx": "19.5.3",
     "prettier": "^2.6.2",
@@ -61,6 +64,7 @@
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.0"
   },
